--- a/CV/cv.html
+++ b/CV/cv.html
@@ -18,5 +18,7 @@
         <a href="http://127.0.0.1:5500/experience.html" target="_blank">Experience</a>
         <a href="http://127.0.0.1:5500/studies.html" target="_blank">Studies</a>
         <a href="http://127.0.0.1:5500/resume.html" target="_blank">My Resume</a>
+        <a href="http://127.0.0.1:5500/login.html" target="_blank">Login</a>
+        <a href="http://127.0.0.1:5500/contact.html" target="_blank">Contact</a>
     </body>
 </html>
