--- a/CV/experience.html
+++ b/CV/experience.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Experience</title>
-</head>
-<body>
-    <ul>My work Experience:
-        <li>IRES - Call center operator</li>
-        <img src="./IRES.jpg" alt="ires logo">
-        <li>UNTOLD - Volunteer</li>
-        <img src="./untold.png" alt="untold">
+  </head>
+  <body>
+    <ul>
+      <h1>My work Experience:</h1>
+      <li><b>ENDAVA - Front-end</b></li>
+      <img src="./endava logo.png" alt="endava logo" height="150" width="150">
+      <li><b>IRES - Call-center operator</b></li>
+      <img src="./IRES.jpg" alt="ires logo" height="150" width="150"/>
     </ul>
-</body>
+    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+  </body>
 </html>
