--- a/CV/resume.html
+++ b/CV/resume.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Resume</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>My Resume:</h1>
     <p>Hi, here you will find my resume for more details</p>
-    <embed src="./CV_BucurMalina.pdf" width="750" height="750">
-</body>
+    <embed src="./CV_BucurMalina.pdf" width="750" height="750" />
+    <br />
+    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+  </body>
 </html>
