--- a/CV/studies.html
+++ b/CV/studies.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studies</title>
-</head>
-<body>
-    <p>Faculty of Electronics, Telecommunications and Information Technology</p>
-    <p>Technical University of Cluj-Napoca</p>
-    <p>3rd year student</p>
-    <img src="./utcn logo.png" alt="The logo of the University">
-</body>
+  </head>
+  <body>
+    <h1>STUDIES:</h1>
+    <p><b>University:</b> Technical University of Cluj-Napoca</p>
+    <p><b>Faculty:</b> Faculty of Electronics, Telecommunications and Information Technology</p>
+    <p><b>Year of study:</b> 3rd year student</p>
+    <p><b>Period:</b> 2019-present</p>
+    <img src="./utcn logo.png" alt="The logo of the University" />
+    <br />
+
+    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+  </body>
 </html>
