--- a/CV/login.html
+++ b/CV/login.html
@@ -26,7 +26,7 @@
         required/>
       <br />
 
-      <label for="email">E-mail:</label>
+      <label for="email">E-mail (@gmail.com):</label>
       <input
         type="email"
         pattern=".+@gmail\.com"
