--- a/CV/contact.html
+++ b/CV/contact.html
@@ -26,7 +26,7 @@
         required/>
       <br/>
 
-      <label for="email">E-mail:</label>
+      <label for="email">E-mail (@gmail.com):</label>
       <input type="email" pattern=".+@gmail\.com" placeholder="Enter your Email" id="email" name="email" required/>
       <br/>
 
