--- a/CV/experience.html
+++ b/CV/experience.html
@@ -14,6 +14,13 @@
       <li><b>IRES - Call-center operator</b></li>
       <img src="./IRES.jpg" alt="ires logo" height="150" width="150"/>
     </ul>
-    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+
+    <style>
+      body {
+        background-color: #AEB6BF;
+      }
+    </style>
+    
+    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Home page</a>
   </body>
 </html>
