--- a/CV/resume.html
+++ b/CV/resume.html
@@ -11,6 +11,16 @@
     <p>Hi, here you will find my resume for more details</p>
     <embed src="./CV_BucurMalina.pdf" width="750" height="750" />
     <br />
-    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+
+    <style>
+      body {
+        background-image: url("./background1.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+    </style>
+
+    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Home page</a>
   </body>
 </html>
