--- a/CV/studies.html
+++ b/CV/studies.html
@@ -9,12 +9,23 @@
   <body>
     <h1>STUDIES:</h1>
     <p><b>University:</b> Technical University of Cluj-Napoca</p>
-    <p><b>Faculty:</b> Faculty of Electronics, Telecommunications and Information Technology</p>
+    <p>
+      <b>Faculty:</b> Faculty of Electronics, Telecommunications and Information
+      Technology
+    </p>
     <p><b>Year of study:</b> 3rd year student</p>
     <p><b>Period:</b> 2019-present</p>
     <img src="./utcn logo.png" alt="The logo of the University" />
     <br />
 
-    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+    <style>
+      body {
+        background-image: url("./background4.jpg");
+        background-repeat: no-repeat;
+       background-size: 1100px;
+      }
+    </style>
+
+    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Home page</a>
   </body>
 </html>
