--- a/CV/studies.html
+++ b/CV/studies.html
@@ -15,14 +15,14 @@
     </p>
     <p><b>Year of study:</b> 3rd year student</p>
     <p><b>Period:</b> 2019-present</p>
-    <img src="./utcn logo.png" alt="The logo of the University" />
+    <!-- <img src="./utcn logo.png" alt="The logo of the University" /> -->
     <br />
 
     <style>
       body {
-        background-image: url("./background4.jpg");
+        background-image: url("./utcn.jpg");
         background-repeat: no-repeat;
-       background-size: 1100px;
+        background-size: 1500px;
       }
     </style>
 
