--- a/CV/contact.html
+++ b/CV/contact.html
@@ -57,6 +57,6 @@
       <input type="submit" value="Submit"/>
     </form>
 
-    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+    <a href="http://127.0.0.1:5500/index.html" target="_blank">Main page</a>
   </body>
 </html>
