--- a/CV/login.html
+++ b/CV/login.html
@@ -51,6 +51,6 @@
       <br />
     </form>
 
-    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Main page</a>
+    <a href="http://127.0.0.1:5500/index.html" target="_blank">Main page</a>
   </body>
 </html>
