--- a/CV/studies.html
+++ b/CV/studies.html
@@ -26,6 +26,6 @@
       }
     </style>
 
-    <a href="http://127.0.0.1:5500/cv.html" target="_blank">Home page</a>
+    <a href="http://127.0.0.1:5500/index.html" target="_blank">Home page</a>
   </body>
 </html>
