--- a/CV/experience.html
+++ b/CV/experience.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="style.css" rel="stylesheet"/>
     <title>Experience</title>
   </head>
   <body>
     <ul>
       <h1>My work Experience:</h1>
-      <li><b>ENDAVA - Front-end</b></li>
+      <li><b class="bold-type">ENDAVA</b> - Front-end</li>
       <img src="./endava logo.png" alt="endava logo" height="150" width="150">
-      <li><b>IRES - Call-center operator</b></li>
+      <li><b class="bold-type">IRES</b> - Call-center operator</li>
       <img src="./IRES.jpg" alt="ires logo" height="150" width="150"/>
     </ul>
 
@@ -21,6 +22,6 @@
       }
     </style>
     
-    <a href="http://127.0.0.1:5500/index.html" target="_blank">Home page</a>
+    <a id="link" href="http://127.0.0.1:5500/index.html" target="_blank">Home page</a>
   </body>
 </html>
