--- a/CV/index.html
+++ b/CV/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>Challenge</title>
   </head>
   <body>
     <header>
-      <h1>Home page
-        <img src="./mb.jpg" alt="My logo" width="50" height="50">
+      <h1 class="home">
+        Home page
+        <img src="./mb.jpg" alt="My logo" width="50" height="50" id="logo" />
       </h1>
     </header>
 
     <picture>
       <source media="(min-width: 801px)" srcset="./image1.jpg" />
       <source media="(max-width: 800px)" srcset="./image.jpg" />
-      <img src="./image.jpg" alt="My photo" width="450" height="400" />
+      <img src="./image.jpg" alt="My photo" width="550" height="500" />
     </picture>
 
-    <p>Hello,</p>
-    <p>
+    <p class="main">
+      Hello,
+      <br />
       My name is Malina and I am a highly organized student, I like to structure
       my day and when I start working on a task, I like to accomplish it.
     </p>
 
-    <ul>
+    <ul class="details">
       <h2>Info:</h2>
       <li>Contact: 0722815457</li>
       <li>Email: malinabucur13@gmail.com</li>
@@ -35,7 +38,9 @@
     <video controls src="./video.mp4" autoplay loop></video>
     <br />
 
-    <a href="http://127.0.0.1:5500/experience.html" target="_blank">Experience</a>
+    <a href="http://127.0.0.1:5500/experience.html" target="_blank"
+      >Experience</a
+    >
     <a href="http://127.0.0.1:5500/studies.html" target="_blank">Studies</a>
     <a href="http://127.0.0.1:5500/resume.html" target="_blank">My Resume</a>
     <a href="http://127.0.0.1:5500/login.html" target="_blank">Login</a>
@@ -43,10 +48,15 @@
     <br />
 
     <footer>
-      <h4>Follow me on: 
-        <a href="https://www.facebook.com/bucur.malina/" target="_blank">Facebook</a> 
-        <a href="https://www.instagram.com/bucur.malina/" target="_blank">Instagram</a>
-      </h4> 
+      <h4>
+        Follow me on:
+        <a href="https://www.facebook.com/bucur.malina/" target="_blank"
+          >Facebook</a
+        >
+        <a href="https://www.instagram.com/bucur.malina/" target="_blank"
+          >Instagram</a
+        >
+      </h4>
     </footer>
   </body>
 </html>
