--- a/CV/studies.html
+++ b/CV/studies.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>Studies</title>
   </head>
   <body>
     <h1>STUDIES:</h1>
-    <p><b>University:</b> Technical University of Cluj-Napoca</p>
+    <p>
+      <b class="bold-type">University:</b> Technical University of Cluj-Napoca
+    </p>
     <p>
       <b>Faculty:</b> Faculty of Electronics, Telecommunications and Information
       Technology
     </p>
     <p><b>Year of study:</b> 3rd year student</p>
     <p><b>Period:</b> 2019-present</p>
-    <!-- <img src="./utcn logo.png" alt="The logo of the University" /> -->
     <br />
 
     <style>
@@ -26,6 +28,8 @@
       }
     </style>
 
-    <a href="http://127.0.0.1:5500/index.html" target="_blank">Home page</a>
+    <a id="link" href="http://127.0.0.1:5500/index.html" target="_blank"
+      >Home page</a
+    >
   </body>
 </html>
