--- a/CV/contact.html
+++ b/CV/contact.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Contact page</title>
   </head>
   <body class="contact-form">
-    <h1 class="contact-label">Contact form:</h1>
-    <p class="contact-label">Please fill out the required informations</p>
+    <div>
+      <a href="index.html" aria-current="page" class="brand">
+        <img id="logo-contact" src="./images/mb.jpg" alt="logo" />
+      </a>
+    </div>
+    <h1 class="contact-label-title">Contact Me</h1>
+    <div class="contact-label" id="label">
+      Please fill out the required informations and I will get back to you very
+      soon
+    </div>
+
     <form action="./contact.html" method="post" class="form1">
       <label class="contact-label" for="fname">First name:</label>
       <input
@@ -121,17 +130,13 @@
         class="set-contact"
         rows="4"
         cols="25"
-        placeholder="Enter your message please"
+        placeholder="Leave me a message.."
         id="textarea"
         name="textarea"
       ></textarea>
       <br />
 
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Send message" class="submit" />
     </form>
-
-    <a id="link" href="http://127.0.0.1:5500/index.html" target="_blank"
-      >Home page</a
-    >
   </body>
 </html>
