--- a/CV/experience.html
+++ b/CV/experience.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="style.css" rel="stylesheet"/>
-    <title>Experience</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Experience | Mălina Bucur</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <ul>
-      <h1>My work Experience:</h1>
-      <li><b class="bold-type">ENDAVA</b> - Front-end</li>
-      <img src="./endava logo.png" alt="endava logo" height="150" width="150">
-      <li><b class="bold-type">IRES</b> - Call-center operator</li>
-      <img src="./IRES.jpg" alt="ires logo" height="150" width="150"/>
-    </ul>
+    <div
+      data-collapse="medium"
+      data-animation="default"
+      data-duration="400"
+      role="banner"
+      class="navhome inner w-nav"
+    >
+      <div>
+        <a href="index.html" class="brand">
+          <img class="nav-name" src="./images/mb.jpg" alt="logo" />
+        </a>
+        <nav role="navigation" class="nav-menu">
+          <a href="experience.html" class="nav-link w-nav-link">experience</a>
+          <a href="resume.html" class="nav-link w-nav-link">resume</a>
+          <a href="studies.html" class="nav-link w-nav-link">studies</a>
+          <a href="mailto:annadtinaclery@gmail.com" class="nav-link w-nav-link"
+            >Contact</a
+          >
+        </nav>
+      </div>
+    </div>
+    <div class="section-project">
+      <h3 class="h2">EXPERIENCE</h3>
 
-    <style>
-      body {
-        background-color: #AEB6BF;
-      }
-    </style>
-    
-    <a id="link" href="http://127.0.0.1:5500/index.html" target="_blank">Home page</a>
+      <div class="w-container">
+        <h1 class="h3">Front-end developer</h1>
+        <h1 class="h3">ENDAVA</h1>
+        <h6>Period: 11.07.2022 - Present</h6>
+        <img src="./images/endava.png" alt="endava logo" id="endava" />
+      </div>
+
+      <hr class="horizontal-divider" />
+
+      <div class="w-container">
+        <h1 class="h3">Call-center operator</h1>
+        <h1 class="h3">IRES</h1>
+        <h6>Period: 11/2020 - 12/2020</h6>
+        <img src="./images/ires.png" alt="ires logo" id="ires" />
+      </div>
+    </div>
   </body>
 </html>
