--- a/CV/contact.html
+++ b/CV/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <title>Contact page</title>
+     <title>Contact page | Mălina Bucur</title>
   </head>
   <body class="contact-form">
     <div>
