--- a/CV/contact.html
+++ b/CV/contact.html
@@ -5,20 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-     <title>Contact page | Mălina Bucur</title>
+    <title>Contact page | Mălina Bucur</title>
   </head>
   <body class="contact-form">
     <div>
-      <a href="index.html" aria-current="page" class="brand">
+      <!-- go to main page -->
+      <a href="index.html" class="brand">
         <img id="logo-contact" src="./images/mb.jpg" alt="logo" />
       </a>
     </div>
+
+    <!-- title -->
     <h1 class="contact-label-title">Contact Me</h1>
     <div class="contact-label" id="label">
       Please fill out the required informations and I will get back to you very
       soon
     </div>
 
+    <!-- the actual form with first name, last name, email, etc. -->
     <form action="./contact.html" method="post" class="form1">
       <label class="contact-label" for="fname">First name:</label>
       <input
