--- a/CV/index.html
+++ b/CV/index.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <!-- the main bar -->
     <div
       data-collapse="medium"
       data-animation="default"
@@ -16,7 +17,7 @@
       class="navhome inner"
     >
       <div class="div-block">
-        <a href="index.html" aria-current="page">
+        <a href="index.html">
           <img class="nav-name" src="./images/mb.jpg" alt="logo" />
         </a>
         <nav role="navigation" class="nav-menu">
@@ -29,6 +30,8 @@
         </nav>
       </div>
     </div>
+
+    <!-- the main bar on scroll -->
     <div
       data-collapse="medium"
       data-animation="default"
@@ -37,7 +40,7 @@
       class="navhome"
     >
       <div>
-        <a href="index.html" aria-current="page" class="brand">
+        <a href="index.html" class="brand">
           <img class="nav-name" src="./images/mb.jpg" alt="logo" />
         </a>
         <nav role="navigation" class="nav-menu">
@@ -50,23 +53,27 @@
         </nav>
       </div>
     </div>
+
+    <!-- title and domain -->
     <div class="section-main">
       <div class="wrapper-title">
-        <h2 class="h1">MĂLINA BUCUR</h2>
+        <h3 class="h2">MĂLINA BUCUR</h3>
         <div class="vertical-divider"></div>
-        <h3>frontend developer</h3>
+        <h5>frontend developer</h5>
       </div>
     </div>
 
+    <!-- intro text about me -->
     <div class="section-intro">
       <div class="container">
         <h1 class="h3">Hello,</h1>
         <div class="text-body">
           My name is Mălina and I’m a student at Technical University of
-          Cluj-Napoca in 3rd year bachelor degree. I am a highly organized
-          student, I like to structure my day and when I start working on a
-          task, I like to accomplish it.
+          Cluj-Napoca in 3rd year bachelor degree.
         </div>
+        <div class="text-body">I am a highly organized
+          student, I like to structure my day and when I start working on a
+          task, I like to accomplish it.</div>
         <div class="text-body">
           I get to design this site, which is my personal CV.
         </div>
@@ -76,12 +83,16 @@
         <div class="text-body">Take a look at my resume. Thanks!</div>
       </div>
     </div>
+
+    <!-- resume button -->
     <div class="container buttons">
       <div class="div-block">
         <a href="resume.html" class="box gray c-button">RESUME</a>
       </div>
     </div>
 
+
+    <!-- studies, experience and contact buttons -->
     <div class="container buttons">
       <h1 class="h3">about me section</h1>
       <div class="port-container">
@@ -91,6 +102,7 @@
       </div>
     </div>
 
+    <!-- go to contact form -->
     <div class="text-body">
       Here you have a contact form if you want to know more
     </div>
@@ -98,6 +110,7 @@
       <a href="contact.html" class="form">Contact form</a>
     </div>
 
+    <!-- go to my social media -->
     <footer>
       <a
         class="social-media"
@@ -129,6 +142,7 @@
       </a>
     </footer>
 
+    <!-- import the logos -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
