--- a/CV/resume.html
+++ b/CV/resume.html
@@ -8,6 +8,7 @@
     <title>Resume | Mălina Bucur</title>
   </head>
   <body>
+    <!-- the main bar fixed -->
     <div
       data-collapse="medium"
       data-animation="default"
@@ -29,9 +30,10 @@
         </nav>
       </div>
     </div>
+    
+    <!-- my resume section -->
     <div class="section-project">
       <h3 class="h2">My Resume</h3>
-
       <div class="w-container">
         <h1 class="h3">Hi, here you will find my resume for more details</h1>
         <iframe src="./pdf/CV_BucurMalina.pdf" id="mycv"></iframe>
