--- a/CV/studies.html
+++ b/CV/studies.html
@@ -8,6 +8,7 @@
     <title>Studies | Mălina Bucur</title>
   </head>
   <body>
+    <!-- the main bar fixed -->
     <div
       data-collapse="medium"
       data-animation="default"
@@ -29,6 +30,8 @@
         </nav>
       </div>
     </div>
+
+    <!-- about studies section -->
     <div class="section-project">
       <h3 class="h2">STUDIES</h3>
 
