--- a/CV/experience.html
+++ b/CV/experience.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <!-- the main bar fixed -->
     <div
       data-collapse="medium"
       data-animation="default"
@@ -29,6 +30,8 @@
         </nav>
       </div>
     </div>
+
+    <!-- about experience section -->
     <div class="section-project">
       <h3 class="h2">EXPERIENCE</h3>
 
