--- a/CV/resume.html
+++ b/CV/resume.html
@@ -24,7 +24,7 @@
           <a href="resume.html" class="nav-link w-nav-link">resume</a>
           <a href="studies.html" class="nav-link w-nav-link">studies</a>
           <a href="experience.html" class="nav-link w-nav-link">experience</a>
-          <a href="mailto:annadtinaclery@gmail.com" class="nav-link w-nav-link"
+          <a href="mailto:malinabucur13@gmail.com" class="nav-link w-nav-link"
             >Contact</a
           >
         </nav>
